Refactor project structure and update bindings
- Update .gitignore to include additional Xcode and build artifacts
- Modify project.pbxproj to add new Swift files and embed libraries
- Change ContentView to display a greeting from the ferrix library
- Update ferrix.udl to remove the add function and keep hello
- Refactor lib.rs to implement hello function instead of add
- Revise gen-swift-bindings.sh for improved build and binding generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,27 @@
+# Rust build artifacts
 /target/
 *.pdb
 *.rs.bk
 
+# Generated bindings
 /bindings/
 
+# macOS
 .DS_Store
 *.swp
 *.swo
 *~
 
+# Xcode - ignore everything except what we need
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
 *.xcworkspace/*
 !*.xcworkspace/contents.xcworkspacedata
 !*.xcworkspace/xcshareddata/
+**/xcuserdata/
+**/*.xcuserstate
+**/DerivedData/
+
+# Generated dylib
+**/libferrix_uniffi.dylib
